/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/



2020-11-23 17:35 UTC+0100 Wilfried Brunken DF7BE
  * samples/gtk_samples/winprn.prg
  * source/gtk/hprinter.prg
  * source/gtk/hwinprn.prg
    ! Ticket #64:
    ! To be continued for LINUX/GTK
    ! First anaylsis, some litle fixes
    ! Adding inline comments.
    ! For details see comment to ticket.

2020-11-16 17:45 UTC+0100 Wilfried Brunken DF7BE
  * doc/HWGUI_dev.txt
  * test/gtk_test/hexdump.prg
    ! Afterglow Tickets #70,#69,#27:
    ! Collection free format texts outside official docs
    ! (hope helpful for all developers of HWGUI and
    !  HWGUI applications) 

2020-11-15 17:45 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_commands.html
    ! Ticket #57:
    ! Different behavior of hotkey marked with "&"
    ! for GTK/LINUX and WinAPI described
    ! in MENU command section.
  * samples/gtk_samples/winprn.prg
  * source/gtk/hprinter.prg
  * source/gtk/hwinprn.prg
    ! Ticket #64:
    ! Print of bitmaps now solved,
    ! because of a bug in GTK
    ! the function 
    ! gdk_pixbuf_save() does not
    ! store the bitmap correct.
    ! From hex value store
    ! in temporary file with
    ! hb_memowrit().
    ! At offsets 0x26 and 0x2a 
    ! the solution in pixels per meter
    ! is stored: for astro.bmp 0xc4 0x0e = 3780
    ! But is set to 0x0 !
    ! Also the size is not correct:
    ! The copy has more bytes.
    ! But to do :
    ! The PrintLine() method show no text, but
    ! PrintLine(10) works.  
    ! (To be continued for GTK)
  * test/gtk_test/bol.prg
    ! Test program for Ticket #69 by Alain Aupaix 

2020-11-15 10:30 UTC+0100 Wilfried Brunken DF7BE
  * test/gtk_test/status.prg
    ! Ticket #70 
  * Readme.txt
  * doc/port.txt
    ! Little corrections.       

2020-11-11 21:15 UTC+0100 Wilfried Brunken DF7BE
  * Readme.txt (New)